Revision history for {{$dist->name}}

{{$NEXT}}

0.20_01   2013-07-17 15:49:31 America/New_York
  - add DisableGroup Plugin

0.20      2013-06-30 19:13:35 America/New_York
  - fix examples
  - use YAML::XS instead of YAML, since Clustericious requires YAML::XS (but not YAML)

0.19      2013-06-27 15:37:55 America/New_York
  - documentation
  - remove ladder and use before_dispatch hook instead for refresh

0.18      2013-06-14 10:50:23 America/New_York
  - take advantage of the new Test::Clustericious::Config

0.17      2013-05-30 15:05:49 America/New_York
  - Fixes for MSWin32

0.16      2013-05-17 22:39:37 America/New_York
  - Require Clustericious 0.9920

0.15      2013-05-17 20:14:41 America/New_York
  - Mojolicious 4.0 compatability

0.14      2013-05-10 11:57:36 EST5EDT
  - declare Class::Method::Modifiers as a prereq

0.12      2013-05-09 21:05:22 America/New_York
  - simplify the self auth plugin
  - don't use lib in main script
  - documentation updates

0.11      2013-04-23 16:53:33 America/New_York
  - use MakeMaker instead of ModuleBuild

0.10      2013-04-16 11:14:23 America/New_York
  - don't clobber user with route variables

0.09      2013-04-12 09:49:34 America/New_York
  - audit log for create,change,remove users,groups and resources
  - fix t/selfauth.t to not use config in ~/etc

0.08      2013-02-13 12:50:03 America/New_York
  - ensure the last line of the file has a new line in modificatons
  - ensure if the last line of the file doesn't have a new line adds still work

0.07      2012-12-27 18:05:54 America/New_York
  - return json if format is JSON.
  - return yml if format is YAML.
  - bug fix: /authz/user/username/action/ now returns 403 or 200 instead of always returning 404
  - feature: also allow /grant/user/username/action/
  - self auth against $c->authz instead of using Clustericious::Plugin::PlugAuth
  - Better tests for case insensitive usernames

0.06      2012-12-14 11:41:26 America/New_York