@@ -2,6 +2,7 @@ package PlugAuth::Plugin::DisableGroup;
 
 use strict;
 use warnings;
+use v5.10;
 use Role::Tiny::With;
 
 # ABSTRACT: Disable accounts which belong to a group
@@ -16,6 +17,8 @@ In your PlugAuth.conf:
    - PlugAuth::Plugin::DisableGroup:
        # the default is "disabled"
        group: disabled
+       # the default is to not create users as disabled
+       disable_on_create: 0
    - PlugAuth::Plugin::FlatAuth: {}
 
 =head1 DESCRIPTION
@@ -30,6 +33,16 @@ Note that you need to specify a real authentication to chain after
 this plugin (L<PlugAuth::Plugin::FlatAuth> is a good choice).  If
 you don't then all authentication will fail.
 
+=head1 OPTIONS
+
+=head2 group
+
+The name of the disabled group.  Defaults to "disabled".
+
+=head2 disable_on_create
+
+If set to true, it will disable all new accounts.  Defaults to false.
+
 =cut
 
 with 'PlugAuth::Role::Plugin';
@@ -38,7 +51,15 @@ with 'PlugAuth::Role::Auth';
 sub init
 {
   my($self) = @_;
-  $self->{group} = $self->plugin_config->{group} // 'disabled';
+  my $group = $self->{group} = $self->plugin_config->{group} // 'disabled';
+  if($self->plugin_config->{disable_on_create})
+  {
+    $self->app->on(create_user => sub {
+      my($app, $args) = @_;
+      my $user = $args->{user};
+      $app->authz->update_group($group, join(',', @{ $app->authz->users_in_group($group) }, $user))
+    });
+  }
 }
 
 sub check_credentials
